proyecto/compiladorCompleto/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> arreglo
Rule 2     statement -> ID EQUALS arreglo
Rule 3     statement -> VAR EQUALS arreglo
Rule 4     statement -> operacion
Rule 5     statement -> ID EQUALS operacion
Rule 6     statement -> VAR EQUALS operacion
Rule 7     statement -> importacion
Rule 8     statement -> indexacion
Rule 9     statement -> ID EQUALS indexacion
Rule 10    statement -> VAR EQUALS indexacion
Rule 11    importacion -> IMPORT NUMPY AS ID
Rule 12    importacion -> IMPORT NUMPY
Rule 13    importacion -> FROM NUMPY IMPORT ARRAY
Rule 14    importacion -> FROM NUMPY IMPORT ARRAY AS ID
Rule 15    importacion -> FROM NUMPY IMPORT ID
Rule 16    importacion -> FROM NUMPY IMPORT ID AS ID
Rule 17    importacion -> IMPORT ID AS ID
Rule 18    importacion -> IMPORT ID
Rule 19    importacion -> FROM ID IMPORT ID
Rule 20    importacion -> FROM ID IMPORT ID AS ID
Rule 21    variosarreglos -> ARREGLO RPAREN
Rule 22    variosarreglos -> ARREGLO COMA variosarreglos
Rule 23    variosarreglos2 -> ARREGLO RCORCHER
Rule 24    variosarreglos2 -> ARREGLO COMA variosarreglos2
Rule 25    arreglo -> NP POINT ARRAY LPAREN LPAREN variosarreglos RPAREN
Rule 26    arreglo -> NP POINT ARRAY LPAREN LCORCHER variosarreglos2 RPAREN
Rule 27    arreglo -> NP POINT ARRAY LPAREN LCORCHER RCORCHER RPAREN
Rule 28    arreglo -> NP POINT ARRAY LPAREN LPAREN RPAREN RPAREN
Rule 29    arreglo -> NP POINT ARRAY LPAREN ARREGLO RPAREN
Rule 30    arreglo -> NP POINT FUNCION LPAREN LPAREN variosarreglos RPAREN
Rule 31    arreglo -> NP POINT FUNCION LPAREN LCORCHER variosarreglos2 RPAREN
Rule 32    arreglo -> NP POINT FUNCION LPAREN LCORCHER RCORCHER RPAREN
Rule 33    arreglo -> NP POINT FUNCION LPAREN LPAREN RPAREN RPAREN
Rule 34    arreglo -> NP POINT FUNCION LPAREN ARREGLO RPAREN
Rule 35    arreglo -> NP POINT ZEROS LPAREN NUMBERS COMA NUMBERS RPAREN
Rule 36    arreglo -> NUMPY POINT ARRAY LPAREN LPAREN variosarreglos RPAREN
Rule 37    arreglo -> NUMPY POINT ARRAY LPAREN LCORCHER variosarreglos2 RPAREN
Rule 38    arreglo -> NUMPY POINT ARRAY LPAREN LCORCHER RCORCHER RPAREN
Rule 39    arreglo -> NUMPY POINT ARRAY LPAREN LPAREN RPAREN RPAREN
Rule 40    arreglo -> NUMPY POINT ARRAY LPAREN ARREGLO RPAREN
Rule 41    arreglo -> NUMPY POINT FUNCION LPAREN LPAREN variosarreglos RPAREN
Rule 42    arreglo -> NUMPY POINT FUNCION LPAREN LCORCHER variosarreglos2 RPAREN
Rule 43    arreglo -> NUMPY POINT FUNCION LPAREN LCORCHER RCORCHER RPAREN
Rule 44    arreglo -> NUMPY POINT FUNCION LPAREN LPAREN RPAREN RPAREN
Rule 45    arreglo -> NUMPY POINT FUNCION LPAREN ARREGLO RPAREN
Rule 46    arreglo -> FUNCION LPAREN LPAREN variosarreglos RPAREN
Rule 47    arreglo -> FUNCION LPAREN LCORCHER variosarreglos2 RPAREN
Rule 48    arreglo -> FUNCION LPAREN LCORCHER RCORCHER RPAREN
Rule 49    arreglo -> FUNCION LPAREN LPAREN RPAREN RPAREN
Rule 50    arreglo -> FUNCION LPAREN ARREGLO RPAREN
Rule 51    arreglo -> NUMPY POINT ZEROS LPAREN NUMBERS COMA NUMBERS RPAREN
Rule 52    operacion -> VAR OPERADOR VAR
Rule 53    slicer -> NUMBERS DOUBLEPOINT NUMBERS
Rule 54    slicer -> NUMBERS DOUBLEPOINT
Rule 55    slicer -> DOUBLEPOINT NUMBERS
Rule 56    slicer -> DOUBLEPOINT
Rule 57    indice -> NUMBERS COMA NUMBERS
Rule 58    indice -> NUMBERS
Rule 59    indice -> NUMBERS COMA
Rule 60    indice -> COMA NUMBERS
Rule 61    indice -> slicer COMA slicer
Rule 62    indice -> slicer COMA
Rule 63    indice -> COMA slicer
Rule 64    indice -> NUMBERS COMA slicer
Rule 65    indice -> slicer COMA NUMBERS
Rule 66    indexacion -> VAR LCORCHER indice RCORCHER

Terminals, with rules where they appear

ARRAY                : 13 14 25 26 27 28 29 36 37 38 39 40
ARREGLO              : 21 22 23 24 29 34 40 45 50
AS                   : 11 14 16 17 20
COMA                 : 22 24 35 51 57 59 60 61 62 63 64 65
DOUBLEPOINT          : 53 54 55 56
EQUALS               : 2 3 5 6 9 10
FROM                 : 13 14 15 16 19 20
FUNCION              : 30 31 32 33 34 41 42 43 44 45 46 47 48 49 50
ID                   : 2 5 9 11 14 15 16 16 17 17 18 19 19 20 20 20
IMPORT               : 11 12 13 14 15 16 17 18 19 20
LCORCHER             : 26 27 31 32 37 38 42 43 47 48 66
LPAREN               : 25 25 26 27 28 28 29 30 30 31 32 33 33 34 35 36 36 37 38 39 39 40 41 41 42 43 44 44 45 46 46 47 48 49 49 50 51
NP                   : 25 26 27 28 29 30 31 32 33 34 35
NUMBERS              : 35 35 51 51 53 53 54 55 57 57 58 59 60 64 65
NUMPY                : 11 12 13 14 15 16 36 37 38 39 40 41 42 43 44 45 51
OPERADOR             : 52
POINT                : 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 51
RCORCHER             : 23 27 32 38 43 48 66
RPAREN               : 21 25 26 27 28 28 29 30 31 32 33 33 34 35 36 37 38 39 39 40 41 42 43 44 44 45 46 47 48 49 49 50 51
VAR                  : 3 6 10 52 52 66
ZEROS                : 35 51
error                : 

Nonterminals, with rules where they appear

arreglo              : 1 2 3
importacion          : 7
indexacion           : 8 9 10
indice               : 66
operacion            : 4 5 6
slicer               : 61 61 62 63 64 65
statement            : 0
variosarreglos       : 22 25 30 36 41 46
variosarreglos2      : 24 26 31 37 42 47

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . arreglo
    (2) statement -> . ID EQUALS arreglo
    (3) statement -> . VAR EQUALS arreglo
    (4) statement -> . operacion
    (5) statement -> . ID EQUALS operacion
    (6) statement -> . VAR EQUALS operacion
    (7) statement -> . importacion
    (8) statement -> . indexacion
    (9) statement -> . ID EQUALS indexacion
    (10) statement -> . VAR EQUALS indexacion
    (25) arreglo -> . NP POINT ARRAY LPAREN LPAREN variosarreglos RPAREN
    (26) arreglo -> . NP POINT ARRAY LPAREN LCORCHER variosarreglos2 RPAREN
    (27) arreglo -> . NP POINT ARRAY LPAREN LCORCHER RCORCHER RPAREN
    (28) arreglo -> . NP POINT ARRAY LPAREN LPAREN RPAREN RPAREN
    (29) arreglo -> . NP POINT ARRAY LPAREN ARREGLO RPAREN
    (30) arreglo -> . NP POINT FUNCION LPAREN LPAREN variosarreglos RPAREN
    (31) arreglo -> . NP POINT FUNCION LPAREN LCORCHER variosarreglos2 RPAREN
    (32) arreglo -> . NP POINT FUNCION LPAREN LCORCHER RCORCHER RPAREN
    (33) arreglo -> . NP POINT FUNCION LPAREN LPAREN RPAREN RPAREN
    (34) arreglo -> . NP POINT FUNCION LPAREN ARREGLO RPAREN
    (35) arreglo -> . NP POINT ZEROS LPAREN NUMBERS COMA NUMBERS RPAREN
    (36) arreglo -> . NUMPY POINT ARRAY LPAREN LPAREN variosarreglos RPAREN
    (37) arreglo -> . NUMPY POINT ARRAY LPAREN LCORCHER variosarreglos2 RPAREN
    (38) arreglo -> . NUMPY POINT ARRAY LPAREN LCORCHER RCORCHER RPAREN
    (39) arreglo -> . NUMPY POINT ARRAY LPAREN LPAREN RPAREN RPAREN
    (40) arreglo -> . NUMPY POINT ARRAY LPAREN ARREGLO RPAREN
    (41) arreglo -> . NUMPY POINT FUNCION LPAREN LPAREN variosarreglos RPAREN
    (42) arreglo -> . NUMPY POINT FUNCION LPAREN LCORCHER variosarreglos2 RPAREN
    (43) arreglo -> . NUMPY POINT FUNCION LPAREN LCORCHER RCORCHER RPAREN
    (44) arreglo -> . NUMPY POINT FUNCION LPAREN LPAREN RPAREN RPAREN
    (45) arreglo -> . NUMPY POINT FUNCION LPAREN ARREGLO RPAREN
    (46) arreglo -> . FUNCION LPAREN LPAREN variosarreglos RPAREN
    (47) arreglo -> . FUNCION LPAREN LCORCHER variosarreglos2 RPAREN
    (48) arreglo -> . FUNCION LPAREN LCORCHER RCORCHER RPAREN
    (49) arreglo -> . FUNCION LPAREN LPAREN RPAREN RPAREN
    (50) arreglo -> . FUNCION LPAREN ARREGLO RPAREN
    (51) arreglo -> . NUMPY POINT ZEROS LPAREN NUMBERS COMA NUMBERS RPAREN
    (52) operacion -> . VAR OPERADOR VAR
    (11) importacion -> . IMPORT NUMPY AS ID
    (12) importacion -> . IMPORT NUMPY
    (13) importacion -> . FROM NUMPY IMPORT ARRAY
    (14) importacion -> . FROM NUMPY IMPORT ARRAY AS ID
    (15) importacion -> . FROM NUMPY IMPORT ID
    (16) importacion -> . FROM NUMPY IMPORT ID AS ID
    (17) importacion -> . IMPORT ID AS ID
    (18) importacion -> . IMPORT ID
    (19) importacion -> . FROM ID IMPORT ID
    (20) importacion -> . FROM ID IMPORT ID AS ID
    (66) indexacion -> . VAR LCORCHER indice RCORCHER

    ID              shift and go to state 1
    VAR             shift and go to state 5
    NP              shift and go to state 8
    NUMPY           shift and go to state 3
    FUNCION         shift and go to state 7
    IMPORT          shift and go to state 4
    FROM            shift and go to state 11

    arreglo                        shift and go to state 2
    operacion                      shift and go to state 9
    importacion                    shift and go to state 6
    statement                      shift and go to state 10
    indexacion                     shift and go to state 12

state 1

    (2) statement -> ID . EQUALS arreglo
    (5) statement -> ID . EQUALS operacion
    (9) statement -> ID . EQUALS indexacion

    EQUALS          shift and go to state 13


state 2

    (1) statement -> arreglo .

    $end            reduce using rule 1 (statement -> arreglo .)


state 3

    (36) arreglo -> NUMPY . POINT ARRAY LPAREN LPAREN variosarreglos RPAREN
    (37) arreglo -> NUMPY . POINT ARRAY LPAREN LCORCHER variosarreglos2 RPAREN
    (38) arreglo -> NUMPY . POINT ARRAY LPAREN LCORCHER RCORCHER RPAREN
    (39) arreglo -> NUMPY . POINT ARRAY LPAREN LPAREN RPAREN RPAREN
    (40) arreglo -> NUMPY . POINT ARRAY LPAREN ARREGLO RPAREN
    (41) arreglo -> NUMPY . POINT FUNCION LPAREN LPAREN variosarreglos RPAREN
    (42) arreglo -> NUMPY . POINT FUNCION LPAREN LCORCHER variosarreglos2 RPAREN
    (43) arreglo -> NUMPY . POINT FUNCION LPAREN LCORCHER RCORCHER RPAREN
    (44) arreglo -> NUMPY . POINT FUNCION LPAREN LPAREN RPAREN RPAREN
    (45) arreglo -> NUMPY . POINT FUNCION LPAREN ARREGLO RPAREN
    (51) arreglo -> NUMPY . POINT ZEROS LPAREN NUMBERS COMA NUMBERS RPAREN

    POINT           shift and go to state 14


state 4

    (11) importacion -> IMPORT . NUMPY AS ID
    (12) importacion -> IMPORT . NUMPY
    (17) importacion -> IMPORT . ID AS ID
    (18) importacion -> IMPORT . ID

    NUMPY           shift and go to state 16
    ID              shift and go to state 15


state 5

    (3) statement -> VAR . EQUALS arreglo
    (6) statement -> VAR . EQUALS operacion
    (10) statement -> VAR . EQUALS indexacion
    (52) operacion -> VAR . OPERADOR VAR
    (66) indexacion -> VAR . LCORCHER indice RCORCHER

    EQUALS          shift and go to state 19
    OPERADOR        shift and go to state 17
    LCORCHER        shift and go to state 18


state 6

    (7) statement -> importacion .

    $end            reduce using rule 7 (statement -> importacion .)


state 7

    (46) arreglo -> FUNCION . LPAREN LPAREN variosarreglos RPAREN
    (47) arreglo -> FUNCION . LPAREN LCORCHER variosarreglos2 RPAREN
    (48) arreglo -> FUNCION . LPAREN LCORCHER RCORCHER RPAREN
    (49) arreglo -> FUNCION . LPAREN LPAREN RPAREN RPAREN
    (50) arreglo -> FUNCION . LPAREN ARREGLO RPAREN

    LPAREN          shift and go to state 20


state 8

    (25) arreglo -> NP . POINT ARRAY LPAREN LPAREN variosarreglos RPAREN
    (26) arreglo -> NP . POINT ARRAY LPAREN LCORCHER variosarreglos2 RPAREN
    (27) arreglo -> NP . POINT ARRAY LPAREN LCORCHER RCORCHER RPAREN
    (28) arreglo -> NP . POINT ARRAY LPAREN LPAREN RPAREN RPAREN
    (29) arreglo -> NP . POINT ARRAY LPAREN ARREGLO RPAREN
    (30) arreglo -> NP . POINT FUNCION LPAREN LPAREN variosarreglos RPAREN
    (31) arreglo -> NP . POINT FUNCION LPAREN LCORCHER variosarreglos2 RPAREN
    (32) arreglo -> NP . POINT FUNCION LPAREN LCORCHER RCORCHER RPAREN
    (33) arreglo -> NP . POINT FUNCION LPAREN LPAREN RPAREN RPAREN
    (34) arreglo -> NP . POINT FUNCION LPAREN ARREGLO RPAREN
    (35) arreglo -> NP . POINT ZEROS LPAREN NUMBERS COMA NUMBERS RPAREN

    POINT           shift and go to state 21


state 9

    (4) statement -> operacion .

    $end            reduce using rule 4 (statement -> operacion .)


state 10

    (0) S' -> statement .



state 11

    (13) importacion -> FROM . NUMPY IMPORT ARRAY
    (14) importacion -> FROM . NUMPY IMPORT ARRAY AS ID
    (15) importacion -> FROM . NUMPY IMPORT ID
    (16) importacion -> FROM . NUMPY IMPORT ID AS ID
    (19) importacion -> FROM . ID IMPORT ID
    (20) importacion -> FROM . ID IMPORT ID AS ID

    NUMPY           shift and go to state 23
    ID              shift and go to state 22


state 12

    (8) statement -> indexacion .

    $end            reduce using rule 8 (statement -> indexacion .)


state 13

    (2) statement -> ID EQUALS . arreglo
    (5) statement -> ID EQUALS . operacion
    (9) statement -> ID EQUALS . indexacion
    (25) arreglo -> . NP POINT ARRAY LPAREN LPAREN variosarreglos RPAREN
    (26) arreglo -> . NP POINT ARRAY LPAREN LCORCHER variosarreglos2 RPAREN
    (27) arreglo -> . NP POINT ARRAY LPAREN LCORCHER RCORCHER RPAREN
    (28) arreglo -> . NP POINT ARRAY LPAREN LPAREN RPAREN RPAREN
    (29) arreglo -> . NP POINT ARRAY LPAREN ARREGLO RPAREN
    (30) arreglo -> . NP POINT FUNCION LPAREN LPAREN variosarreglos RPAREN
    (31) arreglo -> . NP POINT FUNCION LPAREN LCORCHER variosarreglos2 RPAREN
    (32) arreglo -> . NP POINT FUNCION LPAREN LCORCHER RCORCHER RPAREN
    (33) arreglo -> . NP POINT FUNCION LPAREN LPAREN RPAREN RPAREN
    (34) arreglo -> . NP POINT FUNCION LPAREN ARREGLO RPAREN
    (35) arreglo -> . NP POINT ZEROS LPAREN NUMBERS COMA NUMBERS RPAREN
    (36) arreglo -> . NUMPY POINT ARRAY LPAREN LPAREN variosarreglos RPAREN
    (37) arreglo -> . NUMPY POINT ARRAY LPAREN LCORCHER variosarreglos2 RPAREN
    (38) arreglo -> . NUMPY POINT ARRAY LPAREN LCORCHER RCORCHER RPAREN
    (39) arreglo -> . NUMPY POINT ARRAY LPAREN LPAREN RPAREN RPAREN
    (40) arreglo -> . NUMPY POINT ARRAY LPAREN ARREGLO RPAREN
    (41) arreglo -> . NUMPY POINT FUNCION LPAREN LPAREN variosarreglos RPAREN
    (42) arreglo -> . NUMPY POINT FUNCION LPAREN LCORCHER variosarreglos2 RPAREN
    (43) arreglo -> . NUMPY POINT FUNCION LPAREN LCORCHER RCORCHER RPAREN
    (44) arreglo -> . NUMPY POINT FUNCION LPAREN LPAREN RPAREN RPAREN
    (45) arreglo -> . NUMPY POINT FUNCION LPAREN ARREGLO RPAREN
    (46) arreglo -> . FUNCION LPAREN LPAREN variosarreglos RPAREN
    (47) arreglo -> . FUNCION LPAREN LCORCHER variosarreglos2 RPAREN
    (48) arreglo -> . FUNCION LPAREN LCORCHER RCORCHER RPAREN
    (49) arreglo -> . FUNCION LPAREN LPAREN RPAREN RPAREN
    (50) arreglo -> . FUNCION LPAREN ARREGLO RPAREN
    (51) arreglo -> . NUMPY POINT ZEROS LPAREN NUMBERS COMA NUMBERS RPAREN
    (52) operacion -> . VAR OPERADOR VAR
    (66) indexacion -> . VAR LCORCHER indice RCORCHER

    NP              shift and go to state 8
    NUMPY           shift and go to state 3
    FUNCION         shift and go to state 7
    VAR             shift and go to state 25

    operacion                      shift and go to state 26
    arreglo                        shift and go to state 24
    indexacion                     shift and go to state 27

state 14

    (36) arreglo -> NUMPY POINT . ARRAY LPAREN LPAREN variosarreglos RPAREN
    (37) arreglo -> NUMPY POINT . ARRAY LPAREN LCORCHER variosarreglos2 RPAREN
    (38) arreglo -> NUMPY POINT . ARRAY LPAREN LCORCHER RCORCHER RPAREN
    (39) arreglo -> NUMPY POINT . ARRAY LPAREN LPAREN RPAREN RPAREN
    (40) arreglo -> NUMPY POINT . ARRAY LPAREN ARREGLO RPAREN
    (41) arreglo -> NUMPY POINT . FUNCION LPAREN LPAREN variosarreglos RPAREN
    (42) arreglo -> NUMPY POINT . FUNCION LPAREN LCORCHER variosarreglos2 RPAREN
    (43) arreglo -> NUMPY POINT . FUNCION LPAREN LCORCHER RCORCHER RPAREN
    (44) arreglo -> NUMPY POINT . FUNCION LPAREN LPAREN RPAREN RPAREN
    (45) arreglo -> NUMPY POINT . FUNCION LPAREN ARREGLO RPAREN
    (51) arreglo -> NUMPY POINT . ZEROS LPAREN NUMBERS COMA NUMBERS RPAREN

    ARRAY           shift and go to state 29
    FUNCION         shift and go to state 30
    ZEROS           shift and go to state 28


state 15

    (17) importacion -> IMPORT ID . AS ID
    (18) importacion -> IMPORT ID .

    AS              shift and go to state 31
    $end            reduce using rule 18 (importacion -> IMPORT ID .)


state 16

    (11) importacion -> IMPORT NUMPY . AS ID
    (12) importacion -> IMPORT NUMPY .

    AS              shift and go to state 32
    $end            reduce using rule 12 (importacion -> IMPORT NUMPY .)


state 17

    (52) operacion -> VAR OPERADOR . VAR

    VAR             shift and go to state 33


state 18

    (66) indexacion -> VAR LCORCHER . indice RCORCHER
    (57) indice -> . NUMBERS COMA NUMBERS
    (58) indice -> . NUMBERS
    (59) indice -> . NUMBERS COMA
    (60) indice -> . COMA NUMBERS
    (61) indice -> . slicer COMA slicer
    (62) indice -> . slicer COMA
    (63) indice -> . COMA slicer
    (64) indice -> . NUMBERS COMA slicer
    (65) indice -> . slicer COMA NUMBERS
    (53) slicer -> . NUMBERS DOUBLEPOINT NUMBERS
    (54) slicer -> . NUMBERS DOUBLEPOINT
    (55) slicer -> . DOUBLEPOINT NUMBERS
    (56) slicer -> . DOUBLEPOINT

    NUMBERS         shift and go to state 34
    COMA            shift and go to state 37
    DOUBLEPOINT     shift and go to state 35

    slicer                         shift and go to state 38
    indice                         shift and go to state 36

state 19
